tests/rosetta/out/Go/church-numerals-2.error
parse: error[P040]: tests/rosetta/x/Mochi/church-numerals-2.mochi:30:58: lexer: invalid input text "; return f }\n  x..."
  --> tests/rosetta/x/Mochi/church-numerals-2.mochi:30:58

 30 |   fun fCounter(f: Church): Church { counter = counter + 1; return f }
    |                                                          ^

help:
  String literals must be properly closed with a `"`.